--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -46,8 +46,10 @@
 	</Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\Scripts\AJUMPFORDEVITO.cs" />
      <Compile Include="Assets\Scripts\ButtonNextLevel.cs" />
-     <Compile Include="Assets\Testinginput.cs" />
+     <Compile Include="Assets\Scripts\GroundTouch.cs" />
+     <Compile Include="Assets\Test Scripts\Testinginput.cs" />
  <Reference Include="UnityEngine.UI">
  <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
  </Reference>
