Added basic AI/PathFinding Juming is a little odd when using AI need to redo ground detection all together it messes with AI AI can pathfind and jump up and down in the level to reach the player

--- a/Assembly-CSharp-vs.csproj
+++ b/Assembly-CSharp-vs.csproj
@@ -50,6 +50,7 @@
      <Compile Include="Assets\Scripts\ButtonNextLevel.cs" />
      <Compile Include="Assets\Scripts\GroundTouch.cs" />
      <Compile Include="Assets\Scripts\HitZone.cs" />
+     <Compile Include="Assets\Scripts\MoveDestination.cs" />
      <Compile Include="Assets\Scripts\SpeedLimit.cs" />
      <Compile Include="Assets\Test Scripts\Testinginput.cs" />
  <Reference Include="UnityEngine.UI">
