--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -46,12 +46,12 @@
 	</Reference>
   </ItemGroup>
   <ItemGroup>
-     <Compile Include="Assets\Scripts\AJUMPFORDEVITO.cs" />
-     <Compile Include="Assets\Scripts\ButtonNextLevel.cs" />
-     <Compile Include="Assets\Scripts\GroundTouch.cs" />
-     <Compile Include="Assets\Scripts\HitZone.cs" />
-     <Compile Include="Assets\Scripts\MoveDestination.cs" />
-     <Compile Include="Assets\Scripts\SpeedLimit.cs" />
+     <Compile Include="Assets\Scripts\PLayer 1 Scripts\AJUMPFORDEVITO.cs" />
+     <Compile Include="Assets\Scripts\PLayer 1 Scripts\ButtonNextLevel.cs" />
+     <Compile Include="Assets\Scripts\PLayer 1 Scripts\GroundTouch.cs" />
+     <Compile Include="Assets\Scripts\PLayer 1 Scripts\HitZone.cs" />
+     <Compile Include="Assets\Scripts\PLayer 1 Scripts\MoveDestination.cs" />
+     <Compile Include="Assets\Scripts\PLayer 1 Scripts\SpeedLimit.cs" />
      <Compile Include="Assets\Test Scripts\Testinginput.cs" />
  <Reference Include="UnityEngine.UI">
  <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
